--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+    <uses-feature
+        android:name="android.hardware.camera.ar"
+        android:required="true" />
+
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
@@ -17,9 +21,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Projet_PMR"
         tools:targetApi="31">
-        <activity android:name=".ui.activities.ScanActivity"
-            android:exported="true">
-        </activity>
+        <activity
+            android:name=".ui.activities.ARActivity"
+            android:exported="false" />
+        <meta-data
+            android:name="com.google.ar.core"
+            android:value="required" />
+        <activity
+            android:name=".ui.activities.ScanActivity"
+            android:exported="true"></activity>
         <activity
             android:name=".ui.activities.MainActivity"
             android:exported="true"
