--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:name="android.hardware.camera.ar"
         android:required="true" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-feature android:name="android.hardware.camera.ar" />
-    <uses-feature android:name="android.hardware.camera" android:required="true" />
+    <!--<uses-feature android:name="android.hardware.camera.ar" />-->
+    <!--<uses-feature android:name="android.hardware.camera" android:required="true" />-->
 
     <application
         android:allowBackup="true"
@@ -29,7 +29,7 @@
             android:value="required" />
         <activity
             android:name=".ui.activities.ScanActivity"
-            android:exported="true"></activity>
+            android:exported="true"/>
         <activity
             android:name=".ui.activities.MainActivity"
             android:exported="true"
