--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
         <activity
             android:name=".ui.activities.ARActivity"
             android:exported="false" />
+        <activity
+            android:name=".ui.activities.MainARActivity"
+            android:exported="true" />
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
