--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:name="android.hardware.camera.ar"
         android:required="true" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <!--<uses-feature android:name="android.hardware.camera.ar" />-->
     <!--<uses-feature android:name="android.hardware.camera" android:required="true" />-->
 
@@ -27,6 +29,9 @@
         <activity
             android:name=".ui.activities.MainARActivity"
             android:exported="true" />
+        <activity
+            android:name=".ui.activities.ScanGoogleActivity"
+            android:exported="false" />
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
