--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
     <uses-feature
         android:name="android.hardware.camera.ar"
         android:required="true" />
+
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <!--<uses-feature android:name="android.hardware.camera.ar" />-->
-    <!--<uses-feature android:name="android.hardware.camera" android:required="true" />-->
 
     <application
         android:allowBackup="true"
@@ -24,6 +23,9 @@
         android:theme="@style/Theme.Projet_PMR"
         tools:targetApi="31">
         <activity
+            android:name=".ui.activities.PDFActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activities.ARActivity"
             android:exported="false" />
         <activity
@@ -32,15 +34,14 @@
         <activity
             android:name=".ui.activities.ScanGoogleActivity"
             android:exported="false" />
+
         <meta-data
             android:name="com.google.ar.core"
             android:value="required" />
+
         <activity
             android:name=".ui.activities.ScanActivity"
-            android:exported="true"/>
-        <activity
-            android:name=".ui.activities.ScanGoogleActivity"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".ui.activities.MainActivity"
             android:exported="true"
@@ -51,7 +52,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <meta-data android:name="com.google.ar.core" android:value="required" />
+
+        <meta-data
+            android:name="com.google.ar.core"
+            android:value="required" />
     </application>
 
 </manifest>
